--- a/js/template/animation/Urine.html
+++ b/js/template/animation/Urine.html
@@ -1,11 +1,10 @@
 <div class="background urine">
 	<div class="sticker">
-		<div class="tank">
-			<div class="water">
-				<div class="river"></div>
-			</div>
-		</div>
 		<img src="images/animation/urine/background.png" class="background-sticker" alt="">
+		
+		<div class="tank">
+			<div class="water"></div>
+		</div>
 
 		<div class="portholes">
 			<img src="images/animation/urine/grate.png" class="grate" alt="">
@@ -15,7 +14,6 @@
 		<div class="drop">
 			<img src="images/animation/urine/drop.png" alt="">
 		</div>
-
 
 		<div class="bubbles">
 			<img src="images/animation/urine/bubble01.png" alt="" class="bubble">
