--- a/css/screen.css
+++ b/css/screen.css
@@ -4374,6 +4374,7 @@ span.placeholder {
 
 .background.urine {
   max-width: 466px;
+  margin: 0 0 0 27%;
 }
 .background.urine .sticker {
   position: relative;
@@ -4400,11 +4401,11 @@ span.placeholder {
   top: 57%;
   width: 100%;
   height: 100%;
-  background: url("../images/animation/urine/pee.png") no-repeat rgba(0, 0, 0, 0);
+  background: url("../images/animation/urine/pee@2x.png") no-repeat rgba(0, 0, 0, 0);
   background-size: 100%;
 }
 .background.urine .sticker .portholes {
-  width: 81%;
+  width: 79%;
   height: 69.6%;
   position: absolute;
   top: 12.5%;
@@ -4414,7 +4415,11 @@ span.placeholder {
   position: absolute;
   z-index: 2;
 }
+.background.urine .sticker .portholes img.holes {
+  width: 100%;
+}
 .background.urine .sticker .portholes img.grate {
+  width: 40%;
   top: 2%;
   left: 3%;
 }
@@ -4432,56 +4437,72 @@ span.placeholder {
 .background.urine .sticker .bubbles .bubble:nth-child(1) {
   left: 0;
   margin-top: 21.5%;
+  width: 28%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(2) {
   left: -13%;
   margin-top: 11.5%;
+  width: 15.5%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(3) {
   left: 29%;
   margin-top: 23.5%;
+  width: 14.5%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(4) {
   left: 101%;
   margin-top: 24.5%;
+  width: 11.5%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(5) {
   left: 90.5%;
   margin-top: 42%;
+  width: 11.2%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(6) {
   left: -12.5%;
   margin-top: 45.5%;
+  width: 17.3%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(7) {
   left: 70.5%;
   margin-top: 23%;
+  width: 25.4%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(8) {
   left: -31.5%;
   margin-top: 30.5%;
+  width: 22%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(9) {
   left: 22.5%;
   margin-top: 40%;
+  width: 28%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(10) {
   left: 47.5%;
   margin-top: 31.5%;
+  width: 15%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(11) {
   left: 23.5%;
   margin-top: 6%;
+  width: 17.3%;
 }
 .background.urine .sticker .bubbles .bubble:nth-child(12) {
   left: 53.5%;
   margin-top: 11.5%;
+  width: 17.2%;
 }
 .background.urine .sticker .drop {
   position: absolute;
   left: 97%;
   top: 67%;
   z-index: 0;
+  width: 3%;
+}
+.background.urine .sticker .drop img {
+  display: block;
 }
 .background.urine .sticker.active .bubbles .bubble:nth-child(1) {
   -webkit-transition: all 2100ms 4ms ease-in-out;
