--- a/js/template/animation/Urine.html
+++ b/js/template/animation/Urine.html
@@ -1,33 +1,33 @@
 <div class="background urine">
 	<div class="sticker">
-		<img src="images/animation/urine/background.png" class="background-sticker" alt="">
+		<img src="images/animation/urine/background@2x.png" class="background-sticker" alt="">
 		
 		<div class="tank">
 			<div class="water"></div>
 		</div>
 
 		<div class="portholes">
-			<img src="images/animation/urine/grate.png" class="grate" alt="">
-			<img src="images/animation/urine/portholes.png" alt="">
+			<img src="images/animation/urine/grate@2x.png" class="grate" alt="">
+			<img src="images/animation/urine/portholes@2x.png" class="holes" alt="">
 		</div>
 
 		<div class="drop">
-			<img src="images/animation/urine/drop.png" alt="">
+			<img src="images/animation/urine/drop@2x.png" alt="">
 		</div>
 
 		<div class="bubbles">
-			<img src="images/animation/urine/bubble01.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble02.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble03.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble04.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble05.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble06.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble07.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble08.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble09.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble10.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble11.png" alt="" class="bubble">
-			<img src="images/animation/urine/bubble12.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble01@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble02@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble03@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble04@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble05@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble06@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble07@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble08@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble09@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble10@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble11@2x.png" alt="" class="bubble">
+			<img src="images/animation/urine/bubble12@2x.png" alt="" class="bubble">
 		</div>
 	</div>
 </div>
