animation adjustments: - wait 1 second to start animation after expanding test - rerun animation on click - show animation on all screen sizes

--- a/css-sass/view/animation/_base.scss
+++ b/css-sass/view/animation/_base.scss
@@ -1,5 +1,9 @@
 @import "compass/css3/transform";
 
+.view-animation-base {
+    cursor: pointer;
+}
+
 @mixin opacity ( $value: 0.5 ) {
   opacity: $value;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" $value * 100 ")";
