--- a/css/screen.css
+++ b/css/screen.css
@@ -4963,54 +4963,43 @@ span.placeholder {
 }
 
 .background.ova {
-  background-color: #2E90F8;
-  width: 100%;
-  height: 100%;
+  max-width: 354px;
+  margin: 15% 21% 0% 3%;
 }
 .background.ova .sticker {
-  width: 430px;
-  margin: 0 auto;
-  min-height: 500px;
   position: relative;
   z-index: 0;
 }
-.background.ova .sticker img {
+.background.ova .sticker .bg {
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+.background.ova .sticker .part {
   position: absolute;
-  margin: 0 auto;
-  text-align: center;
   z-index: 3;
-  left: 22.3%;
-  top: 16.3%;
 }
 .background.ova .sticker .lense {
-  width: 267px;
-  height: 266px;
-  left: 277px;
-  overflow: hidden;
-  position: relative;
-  top: 23px;
+  position: absolute;
   z-index: 4;
-  border-radius: 200px;
+  top: -17%;
+  left: 51%;
+  width: 76%;
+  height: 75%;
 }
-.background.ova .sticker .lense img {
-  position: relative;
-  left: 0;
-  top: 0;
-  z-index: 0;
+.background.ova .sticker .lense .loupe {
+  position: absolute;
 }
 .background.ova .sticker .lense .critters {
-  position: relative;
-  border-radius: 271px;
-  height: 235px;
-  width: 236px;
+  position: absolute;
+  border-radius: 50%;
+  height: 94%;
+  width: 94%;
   overflow: hidden;
-  top: -254px;
-  background-size: 410px 410px;
-  background-attachment: fixed;
-  background: #fff;
+  top: 3%;
+  left: 4%;
+  background-color: #fff;
   z-index: -1;
-  background-position: 100% 0%;
-  left: 17px;
 }
 .background.ova .sticker .lense .critters .a {
   -webkit-transform: translateZ(0);
@@ -5018,8 +5007,9 @@ span.placeholder {
   -ms-transform: translateZ(0);
   -o-transform: translateZ(0);
   transform: translateZ(0);
-  top: 100px;
-  left: 99px;
+  top: 51%;
+  left: 41%;
+  width: 19%;
 }
 .background.ova .sticker .lense .critters .b {
   -webkit-transform: translateZ(0);
@@ -5027,8 +5017,9 @@ span.placeholder {
   -ms-transform: translateZ(0);
   -o-transform: translateZ(0);
   transform: translateZ(0);
-  top: 16px;
-  left: 84px;
+  top: 22%;
+  left: 56%;
+  width: 17.5%;
 }
 .background.ova .sticker .lense .critters .c {
   -webkit-transform: translateZ(0);
@@ -5036,33 +5027,34 @@ span.placeholder {
   -ms-transform: translateZ(0);
   -o-transform: translateZ(0);
   transform: translateZ(0);
-  top: 32px;
-  left: -64px;
+  top: 13.5%;
+  left: 16.5%;
+  width: 38.5%;
 }
 .background.ova .sticker.active .lense .critters .a {
   -webkit-animation-delay: 0;
   -webkit-animation-duration: 10s;
-  -webkit-animation-name: bot-critter;
+  -webkit-animation-name: a-critter;
   -webkit-animation-iteration-count: 1;
   -webkit-animation-timing-function: linear;
   -moz-animation-delay: 0;
   -moz-animation-duration: 10s;
-  -moz-animation-name: bot-critter;
+  -moz-animation-name: a-critter;
   -moz-animation-iteration-count: 1;
   -moz-animation-timing-function: linear;
   -ms-animation-delay: 0;
   -ms-animation-duration: 10s;
-  -ms-animation-name: bot-critter;
+  -ms-animation-name: a-critter;
   -ms-animation-iteration-count: 1;
   -ms-animation-timing-function: linear;
   -o-animation-delay: 0;
   -o-animation-duration: 10s;
-  -o-animation-name: bot-critter;
+  -o-animation-name: a-critter;
   -o-animation-iteration-count: 1;
   -o-animation-timing-function: linear;
   animation-delay: 0;
   animation-duration: 10s;
-  animation-name: bot-critter;
+  animation-name: a-critter;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   -webkit-animation-fill-mode: forwards;
@@ -5079,54 +5071,54 @@ span.placeholder {
   animation-fill-mode: forwards;
   -webkit-animation-delay: 0;
   -webkit-animation-duration: 10s;
-  -webkit-animation-name: ri-critter;
+  -webkit-animation-name: b-critter;
   -webkit-animation-iteration-count: 1;
   -webkit-animation-timing-function: linear;
   -moz-animation-delay: 0;
   -moz-animation-duration: 10s;
-  -moz-animation-name: ri-critter;
+  -moz-animation-name: b-critter;
   -moz-animation-iteration-count: 1;
   -moz-animation-timing-function: linear;
   -ms-animation-delay: 0;
   -ms-animation-duration: 10s;
-  -ms-animation-name: ri-critter;
+  -ms-animation-name: b-critter;
   -ms-animation-iteration-count: 1;
   -ms-animation-timing-function: linear;
   -o-animation-delay: 0;
   -o-animation-duration: 10s;
-  -o-animation-name: ri-critter;
+  -o-animation-name: b-critter;
   -o-animation-iteration-count: 1;
   -o-animation-timing-function: linear;
   animation-delay: 0;
   animation-duration: 10s;
-  animation-name: ri-critter;
+  animation-name: b-critter;
   animation-iteration-count: 1;
   animation-timing-function: linear;
 }
 .background.ova .sticker.active .lense .critters .c {
   -webkit-animation-delay: 0;
   -webkit-animation-duration: 10s;
-  -webkit-animation-name: big-critter;
+  -webkit-animation-name: c-critter;
   -webkit-animation-iteration-count: 1;
   -webkit-animation-timing-function: linear;
   -moz-animation-delay: 0;
   -moz-animation-duration: 10s;
-  -moz-animation-name: big-critter;
+  -moz-animation-name: c-critter;
   -moz-animation-iteration-count: 1;
   -moz-animation-timing-function: linear;
   -ms-animation-delay: 0;
   -ms-animation-duration: 10s;
-  -ms-animation-name: big-critter;
+  -ms-animation-name: c-critter;
   -ms-animation-iteration-count: 1;
   -ms-animation-timing-function: linear;
   -o-animation-delay: 0;
   -o-animation-duration: 10s;
-  -o-animation-name: big-critter;
+  -o-animation-name: c-critter;
   -o-animation-iteration-count: 1;
   -o-animation-timing-function: linear;
   animation-delay: 0;
   animation-duration: 10s;
-  animation-name: big-critter;
+  animation-name: c-critter;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   -webkit-animation-fill-mode: forwards;
@@ -5136,87 +5128,55 @@ span.placeholder {
   animation-fill-mode: forwards;
 }
 
-@-webkit-keyframes big-critter {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
+@-webkit-keyframes a-critter {
   100% {
-    top: 22px;
-    left: -82px;
-    -webkit-transform: rotate(-48deg);
-    -moz-transform: rotate(-48deg);
-    -ms-transform: rotate(-48deg);
-    -o-transform: rotate(-48deg);
-    transform: rotate(-48deg);
+    top: 49%;
+    left: 27%;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
   }
 }
 
-@-moz-keyframes big-critter {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
+@-moz-keyframes a-critter {
   100% {
-    top: 22px;
-    left: -82px;
-    -webkit-transform: rotate(-48deg);
-    -moz-transform: rotate(-48deg);
-    -ms-transform: rotate(-48deg);
-    -o-transform: rotate(-48deg);
-    transform: rotate(-48deg);
+    top: 49%;
+    left: 27%;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
   }
 }
 
-@-ms-keyframes big-critter {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
+@-ms-keyframes a-critter {
   100% {
-    top: 22px;
-    left: -82px;
-    -webkit-transform: rotate(-48deg);
-    -moz-transform: rotate(-48deg);
-    -ms-transform: rotate(-48deg);
-    -o-transform: rotate(-48deg);
-    transform: rotate(-48deg);
+    top: 49%;
+    left: 27%;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
   }
 }
 
-@keyframes big-critter {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
+@keyframes a-critter {
   100% {
-    top: 22px;
-    left: -82px;
-    -webkit-transform: rotate(-48deg);
-    -moz-transform: rotate(-48deg);
-    -ms-transform: rotate(-48deg);
-    -o-transform: rotate(-48deg);
-    transform: rotate(-48deg);
+    top: 49%;
+    left: 27%;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
   }
 }
 
-@-webkit-keyframes ri-critter {
+@-webkit-keyframes b-critter {
   0% {
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -5231,12 +5191,11 @@ span.placeholder {
     -ms-transform: rotate(92deg);
     -o-transform: rotate(92deg);
     transform: rotate(92deg);
-    top: 16px;
-    left: 130px;
+    left: 74%;
   }
 }
 
-@-moz-keyframes ri-critter {
+@-moz-keyframes b-critter {
   0% {
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -5251,12 +5210,11 @@ span.placeholder {
     -ms-transform: rotate(92deg);
     -o-transform: rotate(92deg);
     transform: rotate(92deg);
-    top: 16px;
-    left: 130px;
+    left: 74%;
   }
 }
 
-@-ms-keyframes ri-critter {
+@-ms-keyframes b-critter {
   0% {
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -5271,12 +5229,11 @@ span.placeholder {
     -ms-transform: rotate(92deg);
     -o-transform: rotate(92deg);
     transform: rotate(92deg);
-    top: 16px;
-    left: 130px;
+    left: 74%;
   }
 }
 
-@keyframes ri-critter {
+@keyframes b-critter {
   0% {
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -5291,76 +5248,87 @@ span.placeholder {
     -ms-transform: rotate(92deg);
     -o-transform: rotate(92deg);
     transform: rotate(92deg);
-    top: 16px;
-    left: 130px;
+    left: 74%;
   }
 }
 
-@-webkit-keyframes bot-critter {
+@-webkit-keyframes c-critter {
   0% {
-    top: 100px;
-    left: 99px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    top: 95px;
-    left: 64px;
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
+    top: 10%;
+    left: 10%;
+    -webkit-transform: rotate(-48deg);
+    -moz-transform: rotate(-48deg);
+    -ms-transform: rotate(-48deg);
+    -o-transform: rotate(-48deg);
+    transform: rotate(-48deg);
   }
 }
 
-@-moz-keyframes bot-critter {
+@-moz-keyframes c-critter {
   0% {
-    top: 100px;
-    left: 99px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    top: 95px;
-    left: 64px;
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
+    top: 10%;
+    left: 10%;
+    -webkit-transform: rotate(-48deg);
+    -moz-transform: rotate(-48deg);
+    -ms-transform: rotate(-48deg);
+    -o-transform: rotate(-48deg);
+    transform: rotate(-48deg);
   }
 }
 
-@-ms-keyframes bot-critter {
+@-ms-keyframes c-critter {
   0% {
-    top: 100px;
-    left: 99px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    top: 95px;
-    left: 64px;
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
+    top: 10%;
+    left: 10%;
+    -webkit-transform: rotate(-48deg);
+    -moz-transform: rotate(-48deg);
+    -ms-transform: rotate(-48deg);
+    -o-transform: rotate(-48deg);
+    transform: rotate(-48deg);
   }
 }
 
-@keyframes bot-critter {
+@keyframes c-critter {
   0% {
-    top: 100px;
-    left: 99px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    top: 95px;
-    left: 64px;
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
+    top: 10%;
+    left: 10%;
+    -webkit-transform: rotate(-48deg);
+    -moz-transform: rotate(-48deg);
+    -ms-transform: rotate(-48deg);
+    -o-transform: rotate(-48deg);
+    transform: rotate(-48deg);
   }
 }
 
