--- a/js/template/animation/OvaParasite.html
+++ b/js/template/animation/OvaParasite.html
@@ -1,13 +1,13 @@
 <div class="background ova">
 	<div class="sticker">
-		<img src="images/animation/ova-parasite/HT_Ova_PetriDish.png" class="background" alt="">
+		<img src="images/animation/ova-parasite/HT_Ova_PetriDish@2x.png" class="bg" alt="">
 
 		<div class="lense">
-			<img src="images/animation/chemistry/loupe.png" alt="">
+			<img src="images/animation/chemistry/loupe@2x.png" class="loupe" alt="">
 			<div class="critters">
-				<img src="images/animation/ova-parasite/ova-critter-3.png" class="a">
-				<img src="images/animation/ova-parasite/ova-critter-2.png" class="b">
-				<img src="images/animation/ova-parasite/ova-critter-1.png" class="c">
+				<img src="images/animation/ova-parasite/ova-critter-3@2x.png" class="part a">
+				<img src="images/animation/ova-parasite/ova-critter-2@2x.png" class="part b">
+				<img src="images/animation/ova-parasite/ova-critter-1@2x.png" class="part c">
 			</div>
 		</div>
 	</div>
