--- a/css-sass/view/animation/_felv-fiv.scss
+++ b/css-sass/view/animation/_felv-fiv.scss
@@ -1,184 +1,171 @@
 .background.felv-fiv {
-	background-color:#0E95A3;
-	width:100%;
-	height: 100%;
+	max-width: round(image-width("../images/animation/felv-fiv/circle-background@2x.png") / 2);
+	margin: 15% 14% 12% 10%;
+
 	.sticker {
-		width: 430px;
-		margin: 0 auto;
-		min-height: 500px;
 		position: relative;
 		z-index: 0;
-		img.background {
-			position: absolute;
-			margin: 0 auto;
-			text-align: center;
+
+		.bg {
 			z-index: 1;
-			left: 22.3%;
-			top: 16.3%;
-			margin-top: 4px;
-			margin-left: 0px;
+			display: block;
+			position: relative;
 		}
 		.darkstrand {
-			position: relative;
-			top: 54px;
-			left: 33px;
-			img {
-				position: absolute;
-				margin: 0 auto;
-				text-align: center;
-				z-index: 2;
-			}
+			position: absolute;
+			top: 10%;
+			left: -12%;
+			z-index: 2;
+			width: 131%;
 		}
 		.lightstrand {
-			position: relative;
-			top: 21px;
-			left: 63px;
-			img {
-				position: absolute;
-				margin: 0 auto;
-				text-align: center;
-				z-index: 3;
-			}
+			position: absolute;
+			top: -18%;
+			left: 13.5%;
+			z-index: 3;
+			width: 77.6%;
 		}
 		.bars-bottom {
-			position: relative;
-			left: 95px;
-			top: 277px;
-			width: 300px;
+			position: absolute;
+			left: 0%;
+			top: 80%;
+			width: 28%;
+			height: 28%;
 			z-index: 2;
 			img {
 				position: absolute;
-				margin: 0 auto;
-				text-align: center;
 				z-index: 2;
 				@include opacity(0);
 				&:nth-child(1) {
 					width:0;
-					left: -12px;
-					top: -5px;
+					left: -17%;
+					top: -8%;
 				}
 				&:nth-child(2) {
 					width:0;
-					top: -19px;
-					left: 3px;
+					top: -27%;
+					left: 5%;
 				}
 				&:nth-child(3) {
 					width:0;
-					top: -33px;
-					left: 25px;
+					top: -47%;
+					left: 40%;
 				}
 				&:nth-child(4) {
 					width:0;
-					top: -46px;
-					left: 45px;
+					top: -65%;
+					left: 72%;
 				}
 			}
 		}
 		.bars-top {
-			position:relative;
-			left: 215px;
-			top: 110px;
-			width: 300px;
+			position:absolute;
+			left: 50%;
+			top: 10%;
+			width: 37%;
+			height: 37%;
 			z-index: 2;
 			img {
 				position: absolute;
-				margin: 0 auto;
-				text-align: center;
 				z-index: 3;
 				@include opacity(0);
 				&:nth-child(1) {
 					width:0;
-					top: 30px;
-					left: -10px;
+					top: 33.5%;
+					left: -11.3%;
 				}
 				&:nth-child(2) {
 					width:0;
-					top: 5px;
-					left: 5px;
+					top: 5.5%;
+					left: 5.5%;
 				}
 				&:nth-child(3) {
 					width:0;
-					top: -11px;
-					left: 24px;
+					top: -12%;
+					left: 27%;
 				}
 				&:nth-child(4) {
 					width:0;
-					top: -30px;
-					left: 44px;
+					top: -33.5%;
+					left: 49.5%;
 				}
 				&:nth-child(5) {
 					width:0;
-					top: -45px;
-					left: 62px;
+					top: -50%;
+					left: 70%;
 				}
 				&:nth-child(6) {
 					width:0;
-					top: -59px;
-					left: 78px;
+					top: -66%;
+					left: 88%;
 				}
 			}
 		}
 		.dots {
-			position:relative;
-			top: 27px;
-			left: 122px;
+			position:absolute;
+			top: -25%;
+			left: 12.5%;
+			height: 100%;
+			width: 100%;
+
 			img {
 				position: absolute;
-				margin: 0 auto;
-				text-align: center;
 				z-index: 3;
 				@include opacity(0);
+
+				width: 7.9%;
+
 				&:nth-child(1) {
-						top: 325px;
-						left: 27px;
+					top: 135%;
+					left: 11%;
 				}
 				&:nth-child(2) {
-						top: 305px;
-						left: 44px;
+					top: 126.5%;
+					left: 18.3%;
 				}
 				&:nth-child(3) {
-						top: 286px;
-						left: 57px;
+					top: 118.5%;
+					left: 23.7%;
 				}
 				&:nth-child(4) {
-						top: 263px;
-						left: 65px;
+					top: 109%;
+					left: 27%;
 				}
 				&:nth-child(5) {
-						top: 239px;
-						left: 73px;
+					top: 99%;
+					left: 30%;
 				}
 				&:nth-child(6) {
-					top: 214px;
-					left: 80px;
+					top: 88.5%;
+					left: 33.3%;
 				}
 				&:nth-child(7) {
-					top: 123px;
-					left: 51px;
+					top: 51%;
+					left: 21.2%;
 				}
 				&:nth-child(8) {
-					top: 95px;
-					left: 59px;
+					top: 39.5%;
+					left: 24.5%;
 				}
 				&:nth-child(9) {
-					top: 70px;
-					left: 72px;
+					top: 29%;
+					left: 30%;
 				}
 				&:nth-child(10) {
-					top: 47px;
-					left: 90px;
+					top: 19.5%;
+					left: 37.5%;
 				}
 				&:nth-child(11) {
-					top: 28px;
-					left: 108px;
+					top: 11.5%;
+					left: 45%;
 				}
 				&:nth-child(12) {
-					top: 14px;
-					left: 130px;
+					top: 6%;
+					left: 54%;
 				}
 				&:nth-child(13) {
-					top: 3px;
-					left: 152px;
+					top: 1.2%;
+					left: 63%;
 				}
 			}
 		}
@@ -192,16 +179,16 @@
 							}
 						}
 						&:nth-child(1) {
-							width:66px;
+							width: 98%;
 						}
 						&:nth-child(2) {
-							width: 64px;
+							width: 95%;
 						}
 						&:nth-child(3) {
-							width: 57px;
+							width: 84.6%;
 						}
 						&:nth-child(4) {
-							width: 45px;
+							width: 66.8%;
 						}
 					}
 				}
@@ -214,22 +201,22 @@
 							}
 						}
 						&:nth-child(1) {
-							width: 70px;
+							width: 78%;
 						}
 						&:nth-child(2) {
-							width: 81px;
+							width: 90.3%;
 						}
 						&:nth-child(3) {
-							width: 84px;
+							width: 93.6%;
 						}
 						&:nth-child(4) {
-							width: 85px;
+							width: 94.7%;
 						}
 						&:nth-child(5) {
-							width: 82px;
+							width: 91.4%;
 						}
 						&:nth-child(6) {
-							width: 76px;
+							width: 84.7%;
 						}
 					}
 				}
