--- a/js/template/animation/Chemistry.html
+++ b/js/template/animation/Chemistry.html
@@ -3,9 +3,7 @@
 		<img src="images/animation/chemistry/background@2x.png" class="stamp" alt="" />
 		<div class="glass">
 			<img src="images/animation/chemistry/loupe@2x.png" class="loupe" alt="" />
-			<div class="paw">
-				<div class="map"></div>
-			</div>
+			<div class="paw"></div>
 		</div>
 	</div>
 </div>
