--- a/css-sass/view/animation/_chemistry.scss
+++ b/css-sass/view/animation/_chemistry.scss
@@ -12,7 +12,7 @@
 		}
 
 		.glass {
-			height: 80%;
+			height: 77%;
 			border-radius: 128px;
 			width: 76.6%;
 			z-index: 3;
@@ -30,36 +30,28 @@
 			}
 
 			.paw {
-				background: #FFF;
+				z-index: 1;
+				position: absolute;
+
+				left: 5%;
+				top: 2%;
 				width: 92%;
 				height: 92%;
-				overflow: hidden;
+
+				background-color: #FFF;
+				background-image: url("../images/animation/chemistry/paw@2x.png");
+				background-repeat: no-repeat;
+				background-position: 138% 29%;
+				background-size: 180%;
 				border-radius: 50%;
-				z-index: 2;
-				position: relative;
-				left: 5%;
-				top: 1%;
-				.map {
-					background: url("../images/animation/chemistry/paw@2x.png") no-repeat transparent;
-					width: 100%;
-					height: 100%;
-					border-radius: 50%;
-					z-index:1;
-					position:relative;
-					background-position: 138% 29%;
-					background-size: 180%;
-					@include animation-fill(forwards);
-					@include perspective(1000px);
-				}
+				@include animation-fill(forwards);
 			}
 		}
 		&.active {
 			.glass {
 				@include animation(glass, 4s, 0ms, 1, ease-in-out);
 				.paw {
-					.map {
-						@include animation(loop, 4s, 100ms, 1, ease-in-out);
-					}
+					@include animation(loop, 4s, 100ms, 1, ease-in-out);
 				}
 			}
 		}
