--- a/js/template/animation/Accuplex.html
+++ b/js/template/animation/Accuplex.html
@@ -1,14 +1,14 @@
 <div class="background accuplex">
 	<div class="sticker">
 		<img src="images/animation/accuplex/2x/large-bug-2x.png" class="bg" alt="">
-		<div class="bug medium"></div>
-		<div class="bug medium"></div>
-		<div class="bug medium"></div>
-		<div class="bug medium"></div>
-		<div class="bug small"></div>
-		<div class="bug small"></div>
-		<div class="bug small"></div>
-		<div class="bug small"></div>
+		<img class="bug medium" src="images/animation/accuplex/2x/med-grey-bug-1-2x.png" />
+		<img class="bug medium" src="images/animation/accuplex/2x/med-grey-bug-2-2x.png" />
+		<img class="bug medium" src="images/animation/accuplex/2x/med-grey-bug-3-2x.png" />
+		<img class="bug medium" src="images/animation/accuplex/2x/med-grey-bug-4-2x.png" />
+		<img class="bug small" src="images/animation/accuplex/2x/sm-pink-bug-1-2x.png" />
+		<img class="bug small" src="images/animation/accuplex/2x/sm-pink-bug-2-2x.png" />
+		<img class="bug small" src="images/animation/accuplex/2x/sm-pink-bug-3-2x.png" />
+		<img class="bug small" src="images/animation/accuplex/2x/sm-pink-bug-4-2x.png" />
 	</div>
 </div>
 
