--- a/css-sass/view/animation/_chemistry.scss
+++ b/css-sass/view/animation/_chemistry.scss
@@ -2,6 +2,11 @@
 	max-width: round(image-width("../images/animation/chemistry/background@2x.png") / 2);
 	margin: 0 25% 0 0;
 
+	/* phone */
+	@media (max-width:($mq-phone)) {
+		margin-right: 20%;
+	}
+
 	.sticker {
 		position: relative;
 		z-index: 0;
