--- a/css-sass/view/animation/_urine.scss
+++ b/css-sass/view/animation/_urine.scss
@@ -2,6 +2,11 @@
 	max-width: round(image-width("../images/animation/urine/background@2x.png") / 2);
 	margin: 0 0 0 27%;
 
+	/* phone */
+	@media (max-width:($mq-phone)) {
+		margin-left: 18%;
+	}
+
 	.sticker {
 		position: relative;
 		z-index: 0;
