urine - update banner bg color https://app.asana.com/0/7908989541876/8008284584725

--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -1,4 +1,4 @@
-@include view-test-base-extend(urine, #5A3492, #6B499E);
+@include view-test-base-extend(urine, #613B97, #6B499E);
 
 .view-test-urine-analysis {
     .test-section-description {
