--- a/css/screen.css
+++ b/css/screen.css
@@ -3326,7 +3326,7 @@ span.placeholder {
 }
 
 .test-header.urine {
-  background-color: #5a3492;
+  background-color: #613b97;
 }
 
 .view-test-urine > .body > .overview {
