--- a/css-sass/view/animation/_heartworm.scss
+++ b/css-sass/view/animation/_heartworm.scss
@@ -1,5 +1,12 @@
 .background.heartworm {
 	max-width: round(image-width("../images/animation/heartworm/2x/background-2x.png") / 2);
+	margin: -8.5% 0;
+
+	/* phone */
+	@media (max-width:($mq-phone)) {
+		margin-top: 0;
+		margin-bottom: 0;
+	}
 
 	.sticker {
 		position: relative;
