--- a/css-sass/view/animation/_thyroxine.scss
+++ b/css-sass/view/animation/_thyroxine.scss
@@ -1,6 +1,12 @@
 .background.t4 {
 	max-width: round(image-width("../images/animation/thyroxine/2x/background@2x.png") / 2);
-	margin: 0 10% 10% 11%;
+	margin: -3% 10% 0% 11%;
+
+	/* phone */
+	@media (max-width:($mq-phone)) {
+		margin-top: 0;
+		margin-bottom: 10%;
+	}
 
 	.sticker {
 		position: relative;
