test header - fixed height https://app.asana.com/0/7908989541876/8147547041806

--- a/css-sass/_common.scss
+++ b/css-sass/_common.scss
@@ -1,5 +1,6 @@
 $pageSectionPaddingRight: 30px;
 $pageSectionPaddingLeft: 15px;
+$testHeaderHeight: 85px;
 
 .page-section {
     padding: 0 $pageSectionPaddingRight 0 $pageSectionPaddingLeft;
