--- a/css-sass/view/_report.scss
+++ b/css-sass/view/_report.scss
@@ -5,7 +5,7 @@
 
         width: 100%;
         max-width: $max-page-width;
-        height: 74px;
+        height: $testHeaderHeight;
 
         z-index: 2;
 
